# moontool

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  Makefile  README.md  main.c  main.cpp  moonsim.sh  web.py
.github/workflows/: ci-rust.yml  release-rust.yml
moon/: moon.c  moon.h
original/moontool/moontool/: Makefile  README  colormoon.icon  icongeom.c  moon.icon  moon_icon  moontool.1  moontool.c  xmoontool.1  xmoontool.c
original/moontoolw/moont16s/: ABOUT.DLG  ABOUT.RES  JULIAN.DLG  JULIAN.H  JULIAN.RES  MAKEBIN.BAT  MAKESRC.BAT  MOONCALC.C  MOONDIAL.C  MOONTOOL.C  MOONTOOL.DEF  MOONTOOL.H  MOONTOOL.MAK  MOONTOOL.RC  MOONTOOL.RES  MOONTOOL.TXT  TIMEZONE.DLG  TIMEZONE.RES  UTC.DLG  UTC.H  UTC.RES
original/moontoolw/moont32s/: BACKZIP.BAT  CLEAN.BAT  MAKEBIN.BAT  MAKESRC.BAT  MOONCALC.C  MOONDIAL.C  MOONT32.DSP  MOONT32.DSW  MOONT32.NCB  MOONT32.OPT  MOONT32.PLG  MOONTOOL.C  MOONTOOL.H  MOONTOOL.RC  README.TXT  RESOURCE.H
original/moontoolw/moont32s/HELP/: MOONTOOL.HPJ  MOONTOOL.RTF
others/: cronfullmoons.py  moonsim.sh  web.py  webmoon.py
others/python/: .gitignore  Makefile  README.md  pyproject.toml
others/python/moon/: moon.py
others/python/moontool/: __main__.py  moon.py
others/python/tests/: test_moon.py
others/rust/: Cargo.toml  Makefile  README.md
others/rust/src/: datetime.rs  lib.rs  main.rs  moon.rs  moon_icon.rs
others/rust/src/moon/: datetime.rs
tests/: test_moon.c
