[package]
name = "moontool"
version = "1.1.0"
edition = "2021"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "John Walker's moontool.c astronomical calculation routines, extracted and ported to Rust."
license = "0BSD"
repository = "https://github.com/qrichert/moontool.git"
readme = "../../README.md"
keywords = ["moon"]
categories = ["aerospace", "mathematics", "science", "command-line-utilities"]

[profile.release]
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(PARANOID)'] }

[dependencies]
time = { version = "0.3", features = ["std", "parsing", "local-offset"] }
textcanvas = { version = "3.2.0", optional = true }

[features]
canvas = ["textcanvas"]

[[bin]]
name = "moontool"
required-features = ["canvas"]
