[package]
name = "moontool"
version = "1.2.0"
edition = "2021"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "John Walker's moontool.c astronomical calculation routines, extracted and ported to Rust."
license = "0BSD"
repository = "https://github.com/qrichert/moontool.git"
readme = "../../README.md"
keywords = ["moon"]
categories = ["aerospace", "mathematics", "science", "command-line-utilities"]

[profile.release]
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(PARANOID)'] }

[dependencies]
# Manipulate dates and time.
# - Get current date and time.
# - Convert from-and-to timestamps.
# - Parse ISO datetime strings.
# - Get day-of-week for date.
# - Convert between local and UTC.
time = { version = "0.3", features = ["std", "parsing", "local-offset"] }
# (CLI) Render Moon and plot lunation charts.
textcanvas = { version = "3.5.0", optional = true }

[features]
# (CLI) Activate `textcanvas` dependency for rich output.
rich-output = ["textcanvas"]

[[bin]]
name = "moontool"
required-features = ["rich-output"]
